--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {base_dir, "_build"}.
 {erl_opts, [debug_info]}.
 {deps, [
-	{uef, {git, "https://github.com/DOBRO/uef-lib.git", {tag, "2.3.0"}}}
+	{uef, "2.3.0"}
 ]}.
 {minimum_otp_vsn, "20.0"}.
 % {shell, [{apps, [binbo]}]}.
