--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,11 @@ otp_release:
   - 22.0
   - 21.0
   - 20.0
-before_script: curl -O https://s3.amazonaws.com/rebar3/rebar3 && chmod +x rebar3
+before_script:
+  - curl -O https://s3.amazonaws.com/rebar3/rebar3 && chmod +x rebar3
 script:
   - ./rebar3 do dialyzer, ct
 branches:
   only:
   - master
   - develop
-cache:
-  directories:
-    - _build
