--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,13 @@ otp_release:
   - 20.0
 before_script:
   - curl -O https://s3.amazonaws.com/rebar3/rebar3 && chmod +x rebar3
+  - rm -fr ${HOME}/stockfish-10-linux
+  - rm -f ${HOME}/stockfish-10-linux.zip
+  - curl https://stockfishchess.org/files/stockfish-10-linux.zip -o ${HOME}/stockfish-10-linux.zip
+  - unzip ${HOME}/stockfish-10-linux.zip -d ${HOME}
+  - chmod +x ${HOME}/stockfish-10-linux/Linux/stockfish_10_x64
 script:
-  - ./rebar3 do dialyzer, ct
+  - UCI_ENGINE_PATH=${HOME}/stockfish-10-linux/Linux/stockfish_10_x64 ./rebar3 do dialyzer, ct
 branches:
   only:
   - master
