--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: erlang
 
 otp_release:
   - 22.0
-  - 21.0
+  - 21.1
   - 20.0
 before_script:
+  - kerl list installations
   - curl -O https://s3.amazonaws.com/rebar3/rebar3 && chmod +x rebar3
   - rm -fr ${HOME}/stockfish-10-linux
   - rm -f ${HOME}/stockfish-10-linux.zip
@@ -12,7 +13,8 @@ before_script:
   - unzip ${HOME}/stockfish-10-linux.zip -d ${HOME}
   - chmod +x ${HOME}/stockfish-10-linux/Linux/stockfish_10_x64
 script:
-  - UCI_ENGINE_PATH=${HOME}/stockfish-10-linux/Linux/stockfish_10_x64 ./rebar3 do dialyzer, ct
+  - UCI_ENGINE_PATH=${HOME}/stockfish-10-linux/Linux/stockfish_10_x64 ./rebar3 ct
+  - ./rebar3 dialyzer
 branches:
   only:
   - master
