--- a/rebar.config
+++ b/rebar.config
@@ -17,6 +17,9 @@
 %	exports_not_used,
 	deprecated_function_calls, deprecated_functions
 ]}.
+{project_plugins, [covertool]}.
 {cover_enabled, true}.
+{cover_export_enabled, true}.
 {cover_opts, [verbose]}.
+{covertool, [{coverdata_files, ["ct.coverdata"]}]}.
 {edoc_opts, [{preprocess, true}]}.
