--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        otp_version: [20, 21, 22, 23]
+        otp_version: [23]
         os: [ubuntu-latest]
 
     container:
