Update rebar.config with base_plt_apps

--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,8 @@
 {minimum_otp_vsn, "20.0"}.
 % {shell, [{apps, [binbo]}]}.
 {dialyzer, [
-	{get_warnings, false}, % DON'T set it to 'true'! This leads to a CPU high load when building PLT
+	{get_warnings, false}, % DON'T set it to 'true'! This leads to a high CPU load when building PLT
+	{base_plt_apps, [erts, kernel, stdlib, compiler, crypto, syntax_tools]},
 	{warnings, [
 		error_handling, race_conditions, unmatched_returns, unknown
 	]}
