--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Binbo CI
+name: Build
 
 on:
   push:
@@ -12,7 +12,7 @@ on:
 
 jobs:
   linux:
-    name: Test on OTP ${{ matrix.otp_version }} and ${{ matrix.os }}
+    name: Build (${{ matrix.os }}, OTP-${{ matrix.otp_version }})
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -26,15 +26,19 @@ jobs:
     container:
       image: erlang:${{ matrix.otp_version }}
 
+    env:
+      STOCKFISH_VERSION: 10
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Install Stockfish
       run: |
-        rm -fr ${HOME}/stockfish-10-linux
-        rm -f ${HOME}/stockfish-10-linux.zip
-        curl https://stockfishchess.org/files/stockfish-10-linux.zip -o ${HOME}/stockfish-10-linux.zip
-        unzip ${HOME}/stockfish-10-linux.zip -d ${HOME}
-        chmod +x ${HOME}/stockfish-10-linux/Linux/stockfish_10_x64
+        rm -fr ${HOME}/stockfish-${STOCKFISH_VERSION}-linux
+        rm -f ${HOME}/stockfish-${STOCKFISH_VERSION}-linux.zip
+        curl https://stockfishchess.org/files/stockfish-${STOCKFISH_VERSION}-linux.zip -o ${HOME}/stockfish-${STOCKFISH_VERSION}-linux.zip
+        unzip ${HOME}/stockfish-${STOCKFISH_VERSION}-linux.zip -d ${HOME}
+        chmod +x ${HOME}/stockfish-${STOCKFISH_VERSION}-linux/Linux/stockfish_${STOCKFISH_VERSION}_x64
     - name: Cache Dialyzer PLTs
       uses: actions/cache@v2
       with:
@@ -52,7 +56,9 @@ jobs:
     - name: Compile
       run: rebar3 compile
     - name: CT tests
-      run: UCI_ENGINE_PATH=${HOME}/stockfish-10-linux/Linux/stockfish_10_x64 rebar3 ct
+      env:
+        UCI_ENGINE_PATH: ${HOME}/stockfish-${STOCKFISH_VERSION}-linux/Linux/stockfish_${STOCKFISH_VERSION}_x64
+      run: rebar3 ct
     - name: Dialyzer
       run: rebar3 dialyzer
     - name: Code coverage
