CI: add code coverage job macos job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,3 +100,5 @@ jobs:
       run: |
         export UCI_ENGINE_PATH=/usr/local/bin/stockfish
         rebar3 ct
+    - name: Code coverage
+      run: rebar3 cover
