--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,12 +88,22 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - name: Extract branch name
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
     - name: Install Erlang
       run: brew install erlang
     - name: Install rebar3
       run: brew install rebar3
     - name: Install Stockfish
       run: brew install stockfish
+    - name: Cache Hex packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/rebar3/hex/hexpm/packages
+        key: ${{ runner.os }}-${{ steps.extract_branch.outputs.branch }}-hex-${{ hashFiles(format('{0}{1}', github.workspace, '/rebar.lock')) }}
+        restore-keys: |
+          ${{ runner.os }}-${{ steps.extract_branch.outputs.branch }}-hex-
     - name: Compile
       run: rebar3 compile
     - name: CT tests
