--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,7 +147,8 @@ jobs:
       run: rebar3 compile
     - name: CT tests
       run: |
-        $env:UCI_ENGINE_PATH = 'C:/Users/runneradmin/stockfish-11-win/Windows/stockfish_20011801_x64.exe'
+        $env:UCI_ENGINE_PATH = (Resolve-Path '~/stockfish-11-win/Windows/stockfish_20011801_x64.exe').Path.replace('\', '/')
+        echo "UCI_ENGINE_PATH=$env:UCI_ENGINE_PATH"
         rebar3 ct
     - name: Code coverage
       run: rebar3 cover
