Add test profile to rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -23,3 +23,9 @@
 {cover_opts, [verbose]}.
 {covertool, [{coverdata_files, ["ct.coverdata"]}]}.
 {edoc_opts, [{preprocess, true}]}.
+
+{profiles, [
+	{test, [
+		{erl_opts, [debug_info]}
+	]}
+]}.
