--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
     strategy:
       matrix:
-        otp_version: [20, 21, 22, 23]
+        otp_version: [20, 21, 22, 23, 24]
         os: [ubuntu-latest]
 
     container:
