--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@
 root = true
 
 [*]
-indent_style = tab
+indent_style = space
 indent_size = 4
 charset = utf-8
 end_of_line = lf
@@ -12,4 +12,12 @@ insert_final_newline = true
 
 [*.{adoc,md}]
 indent_style = space
+indent_size = 4
+
+[*.yml]
+indent_style = space
+indent_size = 2
+
+[Makefile]
+indent_style = tab
 indent_size = 4
