CI: update Stockfish installation section

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,13 +31,19 @@ jobs:
       run: |
         pwd
         whoami
+    - name: Install system packages
+      run: |
+        sudo apt update
+        sudo apt install socat -y
     - name: Install Stockfish
       run: |
-        rm -fr ${HOME}/stockfish_${STOCKFISH_VERSION}_linux_x64
-        rm -f ${HOME}/stockfish_${STOCKFISH_VERSION}_linux_x64.zip
-        curl https://stockfishchess.org/files/stockfish_${STOCKFISH_VERSION}_linux_x64.zip -o ${HOME}/stockfish_${STOCKFISH_VERSION}_linux_x64.zip
-        unzip ${HOME}/stockfish_${STOCKFISH_VERSION}_linux_x64.zip -d ${HOME}
-        chmod +x ${HOME}/stockfish_${STOCKFISH_VERSION}_linux_x64/stockfish_${STOCKFISH_VERSION}_linux_x64
+        export STOCKFISH_DIR=${HOME}/stockfish_${STOCKFISH_VERSION}_linux_x64
+        export STOCKFISH_PATH=${STOCKFISH_DIR}/stockfish_${STOCKFISH_VERSION}_linux_x64
+        rm -fr ${STOCKFISH_DIR}
+        rm -f ${STOCKFISH_DIR}.zip
+        curl https://stockfishchess.org/files/stockfish_${STOCKFISH_VERSION}_linux_x64.zip -o ${STOCKFISH_DIR}.zip
+        unzip ${STOCKFISH_DIR}.zip -d ${HOME}
+        chmod +x ${STOCKFISH_PATH}
     - name: Cache Dialyzer PLTs
       uses: actions/cache@v2
       with:
@@ -58,7 +64,7 @@ jobs:
       run: rebar3 compile
     - name: CT tests
       run: |
-        export BINBO_UCI_ENGINE_PATH=${HOME}/stockfish_${STOCKFISH_VERSION}_linux_x64/stockfish_${STOCKFISH_VERSION}_linux_x64
+        export BINBO_UCI_ENGINE_PATH=${STOCKFISH_PATH}
         rebar3 ct
     - name: Dialyzer
       run: rebar3 dialyzer
