--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
         curl https://stockfishchess.org/files/stockfish_${STOCKFISH_VERSION}_linux_x64.zip -o ${STOCKFISH_DIR}.zip
         unzip ${STOCKFISH_DIR}.zip -d ${HOME}
         chmod +x ${STOCKFISH_PATH}
-        socat tcp-listen:9010,reuseaddr,fork exec:${STOCKFISH_PATH} &
+        socat TCP-LISTEN:9010,reuseaddr,fork EXEC:${STOCKFISH_PATH} &
     - name: Cache Dialyzer PLTs
       uses: actions/cache@v2
       with:
