Fix OTP-25 dialyzer warnings

--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
 {dialyzer, [
     {get_warnings, false}, % DON'T set it to 'true'! This leads to a high CPU load when building PLT
     {warnings, [
-        error_handling, race_conditions, unmatched_returns, unknown
+        error_handling, unmatched_returns, unknown
     ]}
 ]}.
 
