Add ex_doc support

--- a/rebar.config
+++ b/rebar.config
@@ -39,3 +39,21 @@
         {erl_opts, [nowarn_missing_spec_all]}
     ]}
 ]}.
+
+{ex_doc, [
+    {extras, [
+        {"README.md",       #{title => "Readme"}},
+        {"CHANGELOG.md",    #{title => "Changelog"}},
+        {"CONTRIBUTING.md", #{title => "Contributing"}},
+        {"CODE_OF_CONDUCT.md", #{title => "Code Of Conduct"}},
+        {".editorconfig", #{title => "EditorConfig"}},
+        {"LICENSE",         #{title => "License"}}
+
+    ]},
+    {main,          "README.md"},
+    {homepage_url,  "https://github.com/DOBRO/binbo"},
+    {source_url,    "https://github.com/DOBRO/binbo"},
+    {api_reference, true}
+]}.
+
+{hex, [{doc, #{provider => ex_doc}}]}.
