--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        otp_version: [20, 21, 22, 23, 24, 25]
+        otp_version: [20, 21, 22, 23, 24, 25, 26]
         os: [ubuntu-latest]
 
     container:
