CI: add echo for Stockfish path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
     - name: Run Stockfish as TCP service
       run: |
         export STOCKFISH_EXEC_PATH=`which stockfish`
+        echo "Stockfish exec path is: ${STOCKFISH_EXEC_PATH}"
         socat TCP-LISTEN:9010,reuseaddr,fork EXEC:${STOCKFISH_EXEC_PATH} &
     - name: Cache Dialyzer PLTs
       uses: actions/cache@v2
