--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
         apt install socat -y
     - name: Run Stockfish as TCP service
       run: |
-        export STOCKFISH_EXEC_PATH=$(which stockfish)
-        echo "Stockfish exec path is: ${STOCKFISH_EXEC_PATH}"
+        export STOCKFISH_EXEC_PATH=/usr/games/stockfish
+        ls -l ${STOCKFISH_EXEC_PATH}
         socat TCP-LISTEN:9010,reuseaddr,fork EXEC:${STOCKFISH_EXEC_PATH} &
     - name: Cache Dialyzer PLTs
       uses: actions/cache@v2
@@ -58,7 +58,7 @@ jobs:
       run: rebar3 compile
     - name: CT tests
       run: |
-        export BINBO_UCI_ENGINE_PATH=$(which stockfish)
+        export BINBO_UCI_ENGINE_PATH=/usr/games/stockfish
         export BINBO_UCI_ENGINE_HOST=localhost
         export BINBO_UCI_ENGINE_PORT=9010
         rebar3 ct
